# Clash-Royale-Repo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
ingestion/: client.py  config.py  discover_players.py  parsers.py  pull_battlelogs.py  pull_cards.py
notebooks/: bronze_ingest.ipynb  explore_data.ipynb  gold_metrics.ipynb  silver_quality_checks.ipynb  silver_transform.ipynb
orchestration/: trigger_databricks_job.py  upload_to_databricks.py
tests/: conftest.py  test_ingestion.py  test_parsers.py
tests/fixtures/: battle_malformed.json  battle_missing_deck.json  battle_normal.json
